--- a/宠物网首页/css/index.css
+++ b/宠物网首页/css/index.css
@@ -62,14 +62,14 @@ ul{
 #content{
     background-color: white;
     margin-top: 30px;
+    text-align: center;
 }
 
 #content .dom{
-    width: 328px;
+    width: 382px;
     display: inline-block;
     margin: 20px;
     text-align: left;
-    padding: 20px;
 }
 
 #content .dom p{
@@ -114,4 +114,26 @@ ul{
     opacity: 0.6;
 }
 
+/*响应式设计*/
+@media screen and  (max-width: 1153px){
+    #nav ul li a{
+        width: 150px;
+        font-size: 30px;
+    }
+}
+
+@media screen and  (max-width: 873px){
+    #nav ul li a{
+        width: 100px;
+        font-size: 25px;
+    }
+}
+
+@media screen and  (max-width: 688px){
+    #nav ul li a{
+        width: 80px;
+        font-size: 20px;
+    }
+
+}
 
